docs(styling): add styling section & review other sections

--- a/apps/docs/src/pages/documentation/changelog.mdx
+++ b/apps/docs/src/pages/documentation/changelog.mdx
@@ -1,3 +1,5 @@
 # Changelog
 
-This is the Changelog page!
+The UI Kit release changelogs can be found on [GitHub repository](https://github.com/lumada-design/hv-uikit-react).
+We publish a unified release changelog under the [Github Releases](https://github.com/lumada-design/hv-uikit-react/releases), and
+a [per-package](https://github.com/lumada-design/hv-uikit-react/tree/master/packages) `CHANGELOG.md` file.
