--- a/apps/docs/src/pages/documentation/introduction.mdx
+++ b/apps/docs/src/pages/documentation/introduction.mdx
@@ -26,8 +26,8 @@ We are dedicated to ensuring the successful adoption of **UI Kit** within our co
 If you need assistance or have any questions, we're here to help:
 
 - **Chat with Us**: Join our discussion in the [#ui-kit]() channel.
-- **Report Issues**: Explore and contribute to our [github]() repository to report bugs or request features.
+- **Report Issues**: Explore and contribute to our [GitHub](https://github.com/lumada-design/hv-uikit-react) repository to report bugs or request features.
 
 ## License
 
-**UI Kit** is licensed under the [Apache 2.0 license](/LICENSE.md) License.
+**UI Kit** is licensed under the [Apache 2.0 license](https://github.com/lumada-design/hv-uikit-react/?tab=Apache-2.0-1-ov-file#readme) License.
