docs: add BaseChart documentation and more samples

--- a/apps/docs/src/pages/examples/charts.mdx
+++ b/apps/docs/src/pages/examples/charts.mdx
@@ -1,6 +1,7 @@
 import { CodeBlock } from "../../components/code/CodeBlock";
 
 import donutChartTotal from "../../examples/charts/DonutChartTotal?raw";
+import gaugeChart from "../../examples/charts/GaugeChart?raw";
 import lineChartStreamingCode from "../../examples/charts/LineChartStreaming?raw";
 
 # Charts examples
@@ -16,3 +17,9 @@ A line chart with regular interval updates.
 A donut chart that shows the total in the center
 
 <CodeBlock code={{ main: donutChartTotal }} />
+
+### Gauge chart
+
+A gauge chart that shows the current value of a metric.
+
+<CodeBlock code={{ main: gaugeChart }} />
