docs: tokens docs

--- a/apps/docs/src/pages/documentation/get-started.mdx
+++ b/apps/docs/src/pages/documentation/get-started.mdx
@@ -71,7 +71,7 @@ After setting up the provider, you can start using the components provided.
 import { HvTypography } from "@hitachivantara/uikit-react-core";
 
 const MyComponent = () => {
-  return <HvTypography>Hello from the NEXT UI team!</HvTypography>;
+  return <HvTypography>Hello from the UI Kit team!</HvTypography>;
 };
 ```
 
