docs: add Accessibility section

--- a/apps/docs/src/pages/documentation/accessibility.mdx
+++ b/apps/docs/src/pages/documentation/accessibility.mdx
@@ -1,3 +1,39 @@
 # Accessibility
 
-This is the Accessibility page!
+We strive to ensure our component library adheres to accessibility best practices by aligning development and testing efforts
+with [WCAG (Web Content Accessibility Guidelines)](https://www.w3.org/WAI/standards-guidelines/wcag/) and
+[Section 508](https://www.section508.gov/) standards.
+
+Many of our components are custom-built, which means we pay special attention to keyboard support, screen reader compatibility,
+and ARIA attributes. However, we recognize that accessibility is an ongoing process. If you notice any areas where a component's
+accessibility could be improved, we welcome your feedback — please don't hesitate to reach out.
+
+While we aim to deliver accessible components, the responsibility for ensuring overall accessibility ultimately lies with the
+applications that use them. Proper configuration, context-appropriate usage, and thoughtful integration are key to creating
+accessible user experiences.
+
+## Keyboard Navigation
+
+Most of our components support keyboard navigation, allowing users to interact with them using the keyboard. This includes
+navigating through items, selecting options, and performing actions without relying solely on a mouse or touch input.
+
+Here are some examples of standard keyboard interactions you can expect from our components:
+
+| Key               | Action                                                                         |
+| ----------------- | ------------------------------------------------------------------------------ |
+| Buttons           | `Enter` or `Space` to activate                                                 |
+| Modals            | `Esc` to close                                                                 |
+| Tabs              | `Arrow keys` to navigate between tabs, `Tab` to move focus                     |
+| Dropdowns         | `Enter` or `Space` to select, `Arrow keys` to navigate options, `Esc` to close |
+| Checkboxs, Radios | `Space` to toggle selection                                                    |
+| Groups            | `Arrow keys` to navigate between items, `Tab` to move focus                    |
+
+## ARIA and Role Customization
+
+Most components expose props to enhance or override accessibility settings. You can:
+
+- Pass aria-label, aria-labelledby, or aria-describedby
+- Override the default role if needed
+- Control aria-expanded, aria-checked, and other dynamic attributes through props
+
+We recommend referring to [WAI-ARIA Authoring Practices](https://www.w3.org/WAI/ARIA/apg/) when customizing accessibility behavior.
