--- a/apps/docs/src/pages/documentation/forms.mdx
+++ b/apps/docs/src/pages/documentation/forms.mdx
@@ -1,3 +1,53 @@
+import nativeFormCode from "../../../../../docs/guides/forms/NativeForm?raw";
+import reactFormCode from "../../../../../docs/guides/forms/ReactForm?raw";
+import reactHookFormCode from "../../../../../docs/guides/forms/ReactHookForm?raw";
+import { CodeBlock } from "../../components/code/CodeBlock";
+
 # Forms
 
-This is the Forms page!
+Web forms play a crucial role in web applications, as they are the primary form to collect user information.
+By providing a standardized way to capture user input and validate it, we can ensure a consistent user experience across the different applications.
+
+## Form Components
+
+UI Kit provides a set of **Form Components** to build forms. These components have the goals of providing a **consistent React API** to build forms **following the HV Design spec** and
+**ease of use and integration with** native HTML form, React forms and form libraries.
+
+The base API of all the form components is established by the [`HvFormElement`](/components/form-element) component.
+It provides the necessary props to listen to the events, manage the component `status` as well as a `value` prop to make each component **controlled**.
+For a full list of form components, check out `HvFormElement`'s [related components](/components/form-element#related-components)
+
+## Building forms
+
+There are multiple ways to build forms in React, and each one has its pros and cons. In the following section we will cover the most common ways to build forms in React with UI Kit.
+
+### Native form
+
+The simplest way to build a form is by using a native uncontrolled `form`, leveraging the [built-in form validation](https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation#using_built-in_form_validation)
+and reading the results from `FormData`.
+It's a good option for **simple forms** using form components based on native form controls (eg. `input`) where **custom validation is not needed**.
+
+**Note:** Not all UI Kit form components integrate with the native form data or validation.
+
+<CodeBlock code={nativeFormCode} layout="expandable" />
+
+### React form
+
+Whenever control of internal form values or a custom validation is required, controlling the form with React state is a good option.
+When doing so, you should handle the state with controlled components and control changes by adding event handlers in the `onChange` attribute.
+
+<CodeBlock code={reactFormCode} layout="expandable" />
+
+### Form libraries
+
+When working with React and forms there are a lot of complexities and intricacies that we all struggle with: form verbosity, form validations, and managing the state of the forms and its components.
+
+There are libraries like **[React Hook Form](https://react-hook-form.com/)** or **[Formik](https://formik.org/)** that can help you build forms with less pain.
+Both are solving the same problems, and we don't enforce the use of any of them.
+
+Our **Form Components** are compatible with these libraries, but we recommend the use of **imperative set value functions** on each library when handling the `onChange` event of our components.
+While our APIs are not fully aligned, this will be the most consistent way of managing the state of the forms and its components.
+
+#### React Hook Form
+
+<CodeBlock code={reactHookFormCode} layout="expandable" />
