docs: rename /documentation to /docs

--- a/apps/docs/src/pages/components/grid.mdx
+++ b/apps/docs/src/pages/components/grid.mdx
@@ -13,8 +13,8 @@ export const getStaticProps = async ({ params }) => {
 <Header />
 
 <Callout type="info">
-  Please refer to the [Layout documentation](/documentation/layout) for more
-  information on building layouts with UI Kit.
+  Please refer to the [Layout documentation](/docs/layout) for more information
+  on building layouts with UI Kit.
 </Callout>
 
 <Callout type="info">
