--- a/apps/docs/src/pages/docs/layout.mdx
+++ b/apps/docs/src/pages/docs/layout.mdx
@@ -1,3 +1,176 @@
 # Layout
 
-This is the Layout page!
+When building UIs you should always strive for **responsive layouts** to enable your pages to adapt to different screen sizes and orientations,
+ensuring overall consistency across platforms and environments.
+
+The NEXT UI Kit provides the following components to help you create responsive layouts:
+
+- [Container](#container)
+- [Grid](#grid)
+- [Simple Grid](#simple-grid)
+
+One underlying concept for all these components are **breakpoints**. While the container and grid components use internally the breakpoints defined by
+the Design System, the simple grid component enables you to create your own breakpoints. These breakpoints are specific screen sizes at which the layouts
+should adjust themselves to suit the screen resolution and orientation.
+
+The breakpoints defined by the Design System are:
+
+| Breakpoint | Width (px) | Gutters (px) | Number of columns |
+| ---------- | ---------- | ------------ | ----------------- |
+| xs         | 0          | 16           | 4                 |
+| sm         | 600        | 16           | 8                 |
+| md         | 960        | 32           | 12                |
+| lg         | 1270       | 32           | 12                |
+| xl         | 1920       | 32           | 12                |
+
+Whenever the screen resolution goes above or below a breakpoint, the layout should adapt itself to suit the screen size and for the content to be accessible.
+
+## Container
+
+The [`HvContainer`](/components/container) is one of the most basic layout components we provide to our community, and it enables you to center content horizontally on the page.
+
+This component is very useful when your content can't grow beyond a specific breakpoint. In this case, you can use `maxWidth` to specify the breakpoint
+to which the content is bounded. The content will automatically grow or shrink according with the size of the screen and breakpoint used ensuring that
+it doesn't grow beyond the specified width.
+
+```tsx live
+<HvContainer maxWidth="sm">
+  <HvGlobalActions title="Details" />
+
+  <HvTypography variant="body">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quasi sed
+    perferendis optio eos excepturi possimus atque aperiam impedit expedita
+    dolores, est nulla, aut iure, deleniti recusandae corporis eaque provident?
+  </HvTypography>
+  <HvTypography variant="body">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit culpa error
+    vitae fugit minima. Distinctio tempore ipsa voluptatum, vel alias possimus
+    aut, itaque corrupti nesciunt accusantium commodi nulla minima voluptates.
+  </HvTypography>
+</HvContainer>
+```
+
+## Grid
+
+The [`HvGrid`](/components/grid) component enables you to create responsive grid layouts with a variable amount of columns. The grid items will also adapt themselves
+to suit the screen sizes.
+
+By default this component is based on a 12-column grid layout. This can be easily changed through the `columns` property. If this property is set to
+`auto`, the Design System directives will be used where the number of columns will update depending on the breakpoint.
+
+The grid component also enables you to span items across columns if needed. Thus, with this component you'll be able to create a variety of layouts depending
+on your needs.
+
+Below is an example on how to use the grid component where the Design System directives were used and some grid items were spanned across multiple columns.
+
+```tsx live
+<HvGrid columns="auto" container>
+  <HvGrid item xs={4} sm={8} md={12}>
+    <HvGlobalActions title="Dashboard" />
+  </HvGrid>
+  {Array.from({ length: 4 }).map((v, i) => {
+    return (
+      <HvGrid item xs={4} sm={4} md={3} lg={3} key={i}>
+        <HvCard
+          statusColor={i === 0 ? "warning" : "positive"}
+          bgcolor="bgContainer"
+        >
+          <HvCardContent className="grid gap-sm pb-xs!">
+            <div className="flex items-center gap-xxs">
+              <HvIconContainer
+                size="xs"
+                className="p-4px rounded-round bg-bgContainerSecondary border border-borderSubtle"
+              >
+                <div className="i-ph-copy-simple" />
+              </HvIconContainer>
+              <HvTypography variant="title3">KPI {i + 1}</HvTypography>
+            </div>
+            <div className="flex items-baseline gap-2px">
+              <HvTypography variant="title3">
+                {(((i + 1) / (i + 2)) * 100).toFixed(0)}
+              </HvTypography>
+              <HvTypography variant="caption2" className="text-textSubtle">
+                %
+              </HvTypography>
+            </div>
+          </HvCardContent>
+        </HvCard>
+      </HvGrid>
+    );
+  })}
+  <HvGrid item xs={4} sm={8} md={12}>
+    <HvCard bgcolor="atmo1">
+      <HvCardContent>
+        <HvVizProvider>
+          <HvBarChart
+            height={300}
+            data={{
+              Group: ["Group 1", "Group 2", "Group 3"],
+              "Sales Target": [2300, 1000, 7800],
+              "Sales Per Rep": [6000, 3900, 1000],
+              "Monthly Sales": [3700, 6700, 1100],
+              Target: [2100, 7700, 3000],
+              Cash: [500, 7600, 7800],
+            }}
+            groupBy="Group"
+            measures={[
+              "Sales Target",
+              "Sales Per Rep",
+              "Monthly Sales",
+              "Target",
+              "Cash",
+            ]}
+            horizontal
+            grid={{ bottom: 0 }}
+          />
+        </HvVizProvider>
+      </HvCardContent>
+    </HvCard>
+  </HvGrid>
+</HvGrid>
+```
+
+## Simple Grid
+
+The [`HvSimpleGrid`](/components/simple-grid) component is an alternative to the grid component mentioned above and it provides an easy way of creating responsive grids where each item takes an equal amount
+of space. The items will grow or shrink whenever the screen size changes.
+
+This component should be used whenever you need to create grids where items should be distributed across a specific number of columns with the same width.
+
+This component also enables you to create your own breakpoints and define the spacing and number of columns for each one. Thus, contrary to the grid component,
+the simple grid does not rely on the Design System breakpoints. Furthermore, you can only define the number of columns per row and not the span of each grid item
+enabling you to create much simpler grids than the grid component.
+
+In the example below a grid with three columns was created to distribute the cards across them, and when the screen width goes under the Design System
+`sm` (600px) breakpoint the grid only has two columns.
+
+```tsx live
+export default function Demo() {
+  const { activeTheme } = useTheme();
+
+  return (
+    <HvSimpleGrid
+      cols={3}
+      breakpoints={[
+        {
+          maxWidth: activeTheme?.breakpoints.values.sm,
+          cols: 2,
+        },
+      ]}
+    >
+      {Array.from({ length: 9 }).map((v, i) => {
+        return (
+          <HvCard key={i} bgcolor="atmo1">
+            <HvCardHeader title={`Card ${i}`} />
+            <HvCardContent>
+              <HvTypography>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </HvTypography>
+            </HvCardContent>
+          </HvCard>
+        );
+      })}
+    </HvSimpleGrid>
+  );
+}
+```
